--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
       <li><a href="#state" onmouseover="playclip();">State-Level</a></li>
     <ul>
         </nav>
-    </header>
+	    </header>
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <body>
     <h1 class="title">Educational Attainment in the United States</h1>
         
