--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 	    </header>
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <body>
-    <h1 class="title" onmouseover="responsiveVoice.speak('Educational Attainment in the United States') onmouseleave="responsiveVoice.cancel();" ;>Educational Attainment in the United States</h1>
+    <h1 class="title" onmouseover="responsiveVoice.speak('Educational Attainment in the United States')" onmouseleave="responsiveVoice.cancel();" ;>Educational Attainment in the United States</h1>
         
 	
 	<p><br></p>
