--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     </div>
     </form>
 	<div>
-        <svg "id=stacked-bar-chart" align="center"></svg>
+        <svg "id=stacked-bar-chart"; align="center"></svg>
     </div>
 
     
