--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
             <label for="radio2" onmouseover="responsiveVoice.speak('Students (in number of people)');" onmouseleave="responsiveVoice.cancel();">Students (in number of people)</label>
     </div>
     </form>
-	<div>
-        <svg "id=stacked-bar-chart"; align="center"></svg>
+    <div>
+        <svg "id=stacked-bar-chart" align="center"></svg>
     </div>
 
     
