--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
        <nav>
     <ul>
       <li><a href="#top" onmouseover="playclip();">Top</a></li>
-      <li><a href="#national" onmouseover="playclip();">National</a></li>
+      <li><a href="#national" id="national" onmouseover="playclip();">National</a></li>
       <li><a href="#regional" onmouseover="playclip();">Regional</a></li>
       <li><a href="#state" onmouseover="playclip();">State-Level</a></li>
     <ul>
@@ -68,9 +68,19 @@
     
 <script src="https://d3js.org/d3.v4.min.js"></script>
 <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
-<script src="assets/scripts/script_1.js"></script>
-<script src="assets/scripts/script_2.js"></script>
-<script src="assets/scripts/script_3.js"></script>
+	function transition(name) {
+	if (name === "top") {
+		<script src="assets/scripts/script_1.js"></script>
+	}
+	if (name === "national") {
+		<script src="assets/scripts/script_1.js"></script>
+	}
+	if (name === "regional") {
+		<script src="assets/scripts/script_2.js"></script>
+	}
+	if (name === "state")
+	    <script src="assets/scripts/script_3.js"></script>
+	}
 <script>
     $( document ).ready(function() {
       $(window).scroll(function(){
