--- a/index.html
+++ b/index.html
@@ -13,10 +13,9 @@
   <header>
        <nav>
     <ul>
-      <li><a href="#top" onmouseover="playclip();">Top</a></li>
-      <li><a href="#national" id="national" onmouseover="playclip();">National</a></li>
-      <li><a href="#regional" onmouseover="playclip();">Regional</a></li>
-      <li><a href="#state" onmouseover="playclip();">State-Level</a></li>
+      <li><a href="#national" role="button" id="national" onmouseover="playclip();" onclick="national()"> National</a></li>
+      <li><a href="#regional"role="button" id="regional" onmouseover="playclip();"  onclick="regional()">Regional</a></li>
+      <li><a href="#state" role="button" id="state-level" onmouseover="playclip();" onclick="statelevel()">State-Level</a></li>
     <ul>
         </nav>
 	    </header>
@@ -71,6 +70,40 @@
 <script src="assets/scripts/script_1.js"></script>
 <script src="assets/scripts/script_2.js"></script>
 <script src="assets/scripts/script_3.js"></script>
+	
+unction national() {
+	document.getElementById("regionlevel").style.display = "none";
+	document.getElementById("tree-form").style.display = "none";
+	document.getElementById("stack-form").style.display = "none";
+	document.getElementById("statelevell").style.display = "none";
+    	document.getElementById("chart").style.display = "none";
+	document.getElementById("stacked-bar-chart").style.display = "none";
+	document.getElementById("pie-chart").style.display = "block";
+	document.getElementById("nationwide").style.display = "block";
+	
+}
+function regional() {
+	document.getElementById("stack-form").style.display = "none";
+	document.getElementById("statelevell").style.display = "none";
+	document.getElementById("nationwide").style.display = "none";
+  	document.getElementById("pie-chart").style.display = "none";
+	document.getElementById("stacked-bar-chart").style.display = "none";
+	document.getElementById("chart").style.display = "block";
+	document.getElementById("regionlevel").style.display = "block";
+	document.getElementById("tree-form").style.display = "block";
+	
+	
+}
+function statelevel() {
+	document.getElementById("tree-form").style.display = "none";
+	document.getElementById("regionlevel").style.display = "none";
+	document.getElementById("nationwide").style.display = "none";
+   	document.getElementById("pie-chart").style.display = "none";
+	document.getElementById("chart").style.display = "none";
+	document.getElementById("stacked-bar-chart").style.display = "block";
+	document.getElementById("stack-form").style.display = "block";
+	document.getElementById("statelevell").style.display = "block";
+}
 
 <script>
     $( document ).ready(function() {
