--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 <script src="assets/scripts/script_2.js"></script>
 <script src="assets/scripts/script_3.js"></script>
 	
-unction national() {
+function national() {
 	document.getElementById("regionlevel").style.display = "none";
 	document.getElementById("tree-form").style.display = "none";
 	document.getElementById("stack-form").style.display = "none";
