--- a/index.html
+++ b/index.html
@@ -123,6 +123,7 @@ function statelevel() {
    Should be equal the the height of the header
  */
 </script>
+<script src="chart.js"></script>
 <audio>
 <source src="button-25.mp3"></source>
 <source src="button-25.ogg"></source>
