--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
   <header>
        <nav>
     <ul>
-      <li><a href="#top" role="button" id="top" onmouseover="playclip();"> Top</a></li>
-      <li><a href="#national" role="button" id="national" onmouseover="playclip();" onclick="national()"> National</a></li>
-      <li><a href="#regional"role="button" id="regional" onmouseover="playclip();"  onclick="regional()">Regional</a></li>
-      <li><a href="#state" role="button" id="state-level" onmouseover="playclip();" onclick="statelevel()">State-Level</a></li>
+      <li><a href="#top" role="button"  onmouseover="playclip();"> Top</a></li>
+      <li><a href="#national" role="button"  onmouseover="playclip();" onclick="national()"> National</a></li>
+      <li><a href="#regional"role="button"  onmouseover="playclip();"  onclick="regional()">Regional</a></li>
+      <li><a href="#state" role="button"  onmouseover="playclip();" onclick="statelevel()">State-Level</a></li>
     <ul>
         </nav>
 	    </header>
@@ -84,6 +84,10 @@
     });
 });
 
+/* scrollTop() >= 240
+   Should be equal the the height of the header
+ */
+	
 function national() {
 	document.getElementById("regionlevel").style.display = "none";
 	document.getElementById("tree-form").style.display = "none";
@@ -95,7 +99,6 @@ function national() {
 	document.getElementById("nationwide").style.display = "block";
 	
 }
-	
 function regional() {
 	document.getElementById("stack-form").style.display = "none";
 	document.getElementById("statelevell").style.display = "none";
@@ -108,7 +111,6 @@ function regional() {
 	
 	
 }
-	
 function statelevel() {
 	document.getElementById("tree-form").style.display = "none";
 	document.getElementById("regionlevel").style.display = "none";
@@ -120,9 +122,6 @@ function statelevel() {
 	document.getElementById("statelevell").style.display = "block";
 }
 
-/* scrollTop() >= 240
-   Should be equal the the height of the header
- */
 </script>
 <script src="chart.js"></script>
 <audio>
