--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
      
 <body>
     <a name="national"></a>
-    <h1 class="title"  onmouseover="responsiveVoice.speak('Educational Attainment in the United States');" onmouseleave="responsiveVoice.cancel();">Educational Attainment in the United States</h1>
+    <h1 class="title" onmouseover="responsiveVoice.speak('Educational Attainment in the United States');" onmouseleave="responsiveVoice.cancel();">Educational Attainment in the United States</h1>
     <br>
-    <h2 id = "nationwide" class="subtitle" onmouseover="responsiveVoice.speak('Nation-Wide Education Level of Population in Schooling');" onmouseleave="responsiveVoice.cancel();">Nation-Wide Education Level of Population in Schooling</h2>
+    <h2 id= "nationwide"class="subtitle" onmouseover="responsiveVoice.speak('Nation-Wide Education Level of Population in Schooling');" onmouseleave="responsiveVoice.cancel();">Nation-Wide Education Level of Population in Schooling</h2>
 	
     <div class="container">
 	<svg id="pie-chart" viewBox="0 0 960 450">
@@ -89,28 +89,40 @@
  */
 	
 function national() {
-    document.getElementById("tree-form").style.display = "none";
-    document.getElementById("stack-form").style.display = "none";
-        document.getElementById("chart").style.display = "none";
-    document.getElementById("stacked-bar-chart").style.display = "none";
-    document.getElementById("pie-chart").style.display = "block";
-   
-}
-function regional() {
-    document.getElementById("stack-form").style.display = "none";
-    document.getElementById("pie-chart").style.display = "none";
-    document.getElementById("stacked-bar-chart").style.display = "none";
-    document.getElementById("chart").style.display = "block";
-    document.getElementById("tree-form").style.display = "block";
-   
-   
-}
-function statelevel() {
-    document.getElementById("tree-form").style.display = "none";
-    document.getElementById("pie-chart").style.display = "none";
+	document.getElementById("regionlevel").style.display = "none";
+	document.getElementById("tree-form").style.display = "none";
+	document.getElementById("stack-form").style.display = "none";
+	document.getElementById("statelevell").style.display = "none";
     document.getElementById("chart").style.display = "none";
-    document.getElementById("stacked-bar-chart").style.display = "block";
-    document.getElementById("stack-form").style.display = "block";
+	document.getElementById("stacked-bar-chart").style.display = "none";
+	document.getElementById("pie-chart").style.display = "block";
+	document.getElementById("nationwide").style.display = "block";
+	
+
+}
+
+function regional() {
+	document.getElementById("stack-form").style.display = "none";
+	document.getElementById("statelevell").style.display = "none";
+	document.getElementById("nationwide").style.display = "none";
+  	document.getElementById("pie-chart").style.display = "none";
+	document.getElementById("stacked-bar-chart").style.display = "none";
+	document.getElementById("chart").style.display = "block";
+	document.getElementById("regionlevel").style.display = "block";
+	document.getElementById("tree-form").style.display = "block";
+	
+	
+}
+
+function statelevel() {
+	document.getElementById("tree-form").style.display = "none";
+	document.getElementById("regionlevel").style.display = "none";
+	document.getElementById("nationwide").style.display = "none";
+   	document.getElementById("pie-chart").style.display = "none";
+	document.getElementById("chart").style.display = "none";
+	document.getElementById("stacked-bar-chart").style.display = "block";
+	document.getElementById("stack-form").style.display = "block";
+	document.getElementById("statelevell").style.display = "block";
 }
 </script>
 <script src="chart.js"></script>
