--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <header>
        <nav>
     <ul>
-      <li><a href="#top" role="button"  onmouseover="playclip();"> Top</a></li>
+      <li><a href="index2.html" role="button"  onmouseover="playclip();"> Top</a></li>
       <li><a href="#national" role="button"  onmouseover="playclip();" onclick="national()"> National</a></li>
       <li><a href="#regional"role="button"  onmouseover="playclip();"  onclick="regional()">Regional</a></li>
       <li><a href="#state" role="button"  onmouseover="playclip();" onclick="statelevel()">State-Level</a></li>
