--- a/index2.html
+++ b/index2.html
@@ -52,7 +52,7 @@
 <p><br><br><br><br></p>
 
 
-        <h2> </h2>
+        <h2> Average weekly hours spent playing video games in selected countries worldwide as of January 2018</h2>
 <p><br><br><br><br></p>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
@@ -74,7 +74,8 @@
 <p><br><br><br><br></p>
 <p><br><br><br><br></p>
 <p><br><br><br><br></p>
-
+	<h2>Ποσοστό νοικοκυριών με πρόσβαση στο διαδίκτυο τα έτη 2013 με 2017</h2>
+	
 <section class="chart-container">
   <svg width="460" height="320"></svg>
 </section>
