--- a/index2.html
+++ b/index2.html
@@ -27,7 +27,9 @@
 <p><br><br><br><br></p>
 <p><br><br><br><br></p>
   
-
+<script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
+<script src='http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js'></script>
+	
   <div class="container">
   <div class="row">
     <select id="dataSelection">
